# model-registry

./: Makefile
api/openapi/: model-registry.yaml
clients/python/: .gitignore  Makefile  README.md  kiota-gen.py  model-registry.yaml  pyproject.toml
clients/python/src/model_registry/: __init__.py  _client.py  core.py  kiota-lock.json  model_registry_client.py
clients/python/src/model_registry/api/: api_request_builder.py
clients/python/src/model_registry/api/model_registry/: model_registry_request_builder.py
clients/python/src/model_registry/api/model_registry/v1alpha3/: v1alpha3_request_builder.py
clients/python/src/model_registry/api/model_registry/v1alpha3/inference_service/: inference_service_request_builder.py
clients/python/src/model_registry/api/model_registry/v1alpha3/inference_services/: inference_services_request_builder.py
clients/python/src/model_registry/api/model_registry/v1alpha3/model_artifact/: model_artifact_request_builder.py
clients/python/src/model_registry/api/model_registry/v1alpha3/model_artifacts/: model_artifacts_request_builder.py
clients/python/src/model_registry/api/model_registry/v1alpha3/model_version/: model_version_request_builder.py
clients/python/src/model_registry/api/model_registry/v1alpha3/model_versions/: model_versions_request_builder.py
clients/python/src/model_registry/api/model_registry/v1alpha3/registered_model/: registered_model_request_builder.py
clients/python/src/model_registry/api/model_registry/v1alpha3/registered_models/: registered_models_request_builder.py
clients/python/src/model_registry/api/model_registry/v1alpha3/serving_environment/: serving_environment_request_builder.py
clients/python/src/model_registry/api/model_registry/v1alpha3/serving_environments/: serving_environments_request_builder.py
clients/python/src/model_registry/models/: artifact.py  artifact_list.py  artifact_state.py  base_artifact.py  base_artifact_create.py  base_artifact_update.py  base_execution.py  base_execution_create.py  base_execution_update.py  base_resource.py  base_resource_create.py  base_resource_list.py  base_resource_update.py  base_resource_update_custom_properties.py  doc_artifact.py  error.py  execution_state.py  inference_service.py  inference_service_create.py  inference_service_state.py  inference_service_update.py  model_artifact.py  model_artifact_create.py  model_artifact_update.py  model_version.py  model_version_create.py  model_version_state.py  model_version_update.py  order_by_field.py  registered_model.py  registered_model_create.py  registered_model_list.py  registered_model_state.py  registered_model_update.py  serve_model.py  serve_model_create.py  serve_model_list.py  serve_model_update.py  serving_environment.py  serving_environment_create.py  (+3 more)
clients/python/src/model_registry/types/: __init__.py  artifacts.py  base.py  contexts.py  options.py
clients/python/tests/: conftest.py  test_client.py  test_core.py
patches/: type_asserts.patch
(+18 files in other folders)
